infra/k8s/base/web-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hta-web-vpn
  namespace: hta-platform
  labels:
    app: hta-web
    app.kubernetes.io/name: hta-web
    app.kubernetes.io/component: vpn-ingress
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30081
      protocol: TCP
      name: http
  selector:
    app: hta-web
